noinst_PROGRAMS = \
  demo_read_cnt \
  demo_read_avr \
  demo_write_cnt \
  demo_write_avr \
  demo_v4_read_cnt \
  demo_v4_write_cnt \
  libeep_info

demo_read_cnt_CFLAGS = -I../src
demo_read_cnt_LDADD = ../src/libeep.la -lm
demo_read_cnt_SOURCES = demo_read_cnt.c

demo_read_avr_CFLAGS = -I../src
demo_read_avr_LDADD = ../src/libeep.la -lm
demo_read_avr_SOURCES = demo_read_avr.c

demo_write_cnt_CFLAGS = -I../src
demo_write_cnt_LDADD = ../src/libeep.la -lm
demo_write_cnt_SOURCES = demo_write_cnt.c

demo_write_avr_CFLAGS = -I../src
demo_write_avr_LDADD = ../src/libeep.la -lm
demo_write_avr_SOURCES = demo_write_avr.c

demo_v4_read_cnt_CFLAGS = -I../src
demo_v4_read_cnt_LDADD = ../src/libeep.la -lm
demo_v4_read_cnt_SOURCES = demo_v4_read_cnt.c

demo_v4_write_cnt_CFLAGS = -I../src
demo_v4_write_cnt_LDADD = ../src/libeep.la -lm
demo_v4_write_cnt_SOURCES = demo_v4_write_cnt.c

libeep_info_CFLAGS = -I../src
libeep_info_LDADD = ../src/libeep.la -lm
libeep_info_SOURCES = libeep_info.c
